--- a/AsyncAwait/AsyncAwait.csproj
+++ b/AsyncAwait/AsyncAwait.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BAA51635-EEDB-4C0F-9B72-BE6CEFF5D501}</ProjectGuid>
+    <ProjectGuid>{56565428-5152-4CB0-90C4-A847777F0DE7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PLINQDataProcessingWithCancellation</RootNamespace>
-    <AssemblyName>PLINQDataProcessingWithCancellation</AssemblyName>
+    <RootNamespace>AsyncAwait</RootNamespace>
+    <AssemblyName>AsyncAwait</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
